OO-5843: decouple flexi table data model from old table controller code